--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/gallery.css">
+    <link rel="stylesheet" href="./assets/css/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://kit.fontawesome.com/9514e3dbdb.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +46,14 @@
             </div> -->
     </header>
     <main>
-
+        <div class="contactPage">
+            <h2 id="subHeadingContact">CONTACT US</h2>
+            <div class="phoneEmail">
+                <a ><img src="./assets/icon/phone-call.png"> Phone : +61 405291717</a>
+                <a href="mailto:lazybarber@lazybarber.com"><img src="./assets/icon/email.png"> Email : lazybarber@lazybarber.com</a>
+            </div>
+            
+        </div>
     </main>
     <footer>
         <div class="footerone">
